# tgpt

./: README.md  __init__.py  install_tgpt.sh  prompts.py  pyproject.toml  system_prompt.py  tgpt.py
